# Robotics_academy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
Recitations/: Recitation6_Gazebo.md  Recitation7_ros2_control.md
examples/Section10_Build_the_Robot/: README.md
examples/Section10_Build_the_Robot/bumperbot_ws/src/bumperbot_bringup/: package.xml
examples/Section10_Build_the_Robot/bumperbot_ws/src/bumperbot_controller/: package.xml
examples/Section10_Build_the_Robot/bumperbot_ws/src/bumperbot_cpp_examples/: package.xml
examples/Section10_Build_the_Robot/bumperbot_ws/src/bumperbot_firmware/: package.xml
examples/Section11_SLAM/: README.md
examples/Section12_Navigation/: README.md
examples/Section1_Introduction/: README.md
examples/Section2_Locomotion/: README.md
examples/Section3_Control/: README.md
examples/Section4_Kinematics/: README.md
examples/Section5_Differential_Kinematics/: README.md
examples/Section6_TF2_Library/: README.md
examples/Section7_Odometry/: README.md
examples/Section8_Probability_for_Robotics/: README.md
examples/Section9_Sensor_Fusion/: README.md
examples/fws_robot_harmonic/: README.md
examples/fws_robot_harmonic/src/state_estimation/: package.xml
linux/: Dockerfile  docker-compose.yml  start.sh
macos/: Dockerfile  docker-compose.yml
notebooks/: README.md
notebooks/ros2_slam_ws/src/diff_drive_description/: package.xml
notebooks/ros2_slam_ws/src/slam_bringup/: CMakeLists.txt  package.xml
notebooks/ros2_slam_ws/src/slam_bringup/launch/: slam_full.launch.py
notebooks/ros2_slam_ws/src/slam_bringup/rviz/: slam.rviz
notebooks/ros2_slam_ws/src/slam_ekf/: package.xml  setup.py
notebooks/ros2_slam_ws/src/slam_ekf/launch/: ekf.launch.py
notebooks/ros2_slam_ws/src/slam_ekf/slam_ekf/: ekf_node.py
racademy_ws/src/racademy_controller/: CMakeLists.txt  package.xml
racademy_ws/src/racademy_controller/launch/: controller.launch.py
racademy_ws/src/racademy_description/: package.xml
racademy_ws/src/racademy_description/launch/: gazebo.launch.py
racademy_ws/src/racademy_description/urdf/: macros.xacro  materials.xacro  racademy.gazebo.xacro  racademy.ros2_control.xacro  racademy.urdf.xacro
slam/: README.md
slam/1_kalman_filters/: 2_models.ipynb  3_kalman_filters.ipynb
slam/ros2_slam_ws/: ALGORITHMS.md
slam/ros2_slam_ws/src/diff_drive_description/: CMakeLists.txt
slam/ros2_slam_ws/src/icp_slam/: package.xml  setup.py
slides/: Lecture1_Ros_basics.pptx
tutorials/tf2/: 01_introduction.md  02_demo_walkthrough.md  06_tools_and_debugging.md  README.md
windows/: Dockerfile  README.md  docker-compose.yml  start.bat
(+23 files in other folders)
