<?xml version="1.0"?>
<package format="3">
  <name>slam_bringup</name>
  <version>0.1.0</version>
  <description>
    Top-level bringup package: launches Gazebo, the diff-drive robot,
    EKF state estimation, ICP SLAM, and RViz in a single command.
  </description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>diff_drive_description</exec_depend>
  <exec_depend>slam_ekf</exec_depend>
  <exec_depend>icp_slam</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
